--- a/inheritance/templates/department.html
+++ b/inheritance/templates/department.html
@@ -60,7 +60,7 @@
 <hr>
 
 <div class="dept-container">
-  {% for d in dept %}
+  {% for d in dict_dept %}
     <div class="dept-card mb-4 text-center">
       <h2 class="dept-name">{{ d.dep_name }}</h2>
       <p class="dept-desc">{{ d.dep_description }}</p>
