--- a/inheritance/templates/doctors.html
+++ b/inheritance/templates/doctors.html
@@ -82,7 +82,7 @@
 
   <div class="container text-center bg-secondary">
     <div class="row justify-content-center">
-      {% for d in doctors %}
+      {% for d in dict_docs %}
         <div class="card doctor-card text-center">
           <img src="{{ d.doc_image.url }}" alt="Doctor Image">
           <div class="card-body">
