--- a/inheritance/templates/booking.html
+++ b/inheritance/templates/booking.html
@@ -61,11 +61,12 @@
     {% endfor %}
   {% endif %}
 
-<form method="post" novalidate>
-  {% csrf_token %}
-  {{ form|crispy }}
-  <button type="submit" class="btn btn-primary btn-lg mt-4">Submit</button>
-</form>
-
+  <form method="post" novalidate>
+    {% csrf_token %}
+    {{ form|crispy }}
+    <div class="d-grid mt-4">
+      <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+    </div>
+  </form>
 </div>
 {% endblock %}
